more corections to avoid high contrast in buttons, etc.

--- a/src/resources/css/themes/Black/General.css
+++ b/src/resources/css/themes/Black/General.css
@@ -4,21 +4,28 @@
 /* Button ----------------------*/
 QPushButton
 {
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(140, 140, 140);
+    border: 1px solid black;
 }
 
 QPushButton:checked
 {
-    background-color: rgb(180, 180, 180);
+    background-color: rgb(80, 80, 80);
 }
 
 QPushButton:hover
 {
-    background-color: white;
-    color: black;
-    border: 1px solid rgb(120, 120, 120);
+    background-color: rgb(20, 20, 20);
+    color: rgb(140, 140, 140);
+    border: 1px solid black;
 }
 
+QPushButton[enabled="false"]        /* disabled buttons */
+{
+    background: none;
+    color: black;
+    border-color: rgba(0, 0, 0, 40);
+}
 
 /* Scroll bars ----------------------*/
 QScrollBar:vertical,
@@ -123,7 +130,7 @@ QLineEdit#groupNameField:focus
 {
     border-color: rgba(0, 0, 0, 90);
     background-color: rgb(20, 20, 20);
-    color: white;
+    color: rgb(140, 140, 140);
 }
 
 
