--- a/src/resources/css/themes/Black/LocalTrack.css
+++ b/src/resources/css/themes/Black/LocalTrack.css
@@ -99,19 +99,19 @@ LocalTrackView #inputPanel:hover
 
 #xmitButton:checked
 {
-    background-color: rgb(195, 195, 195);
-    border-color: rgb(250, 250, 250);
+    background-color: rgb(140, 140, 140);
+    border-color: rgb(20, 20, 20);
 }
 
 #xmitButton[preparing="true"]
 {
-    background-color: rgb(255, 255, 0);
+    background-color: rgba(255, 255, 0, 80);
 }
 
 #xmitButton:!checked
 {
-    background-color: rgb(40, 40, 40);
-    border-color: rgb(250, 250, 250, 250);
+    background-color: rgb(80, 80, 80);
+    border-color: rgb(140, 140, 140, 140);
     color: black;
 }
 
