--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -111,13 +111,13 @@ NinjamTrackView  #channelName               /* channel name for ninjamers */
 NinjamPanel #ninjamControlsPanel
 {
     background-color: rgba(0, 0, 0, 20);
-    border: 1px solid rgb(190, 190, 190);
+    border: 1px solid rgb(140, 140, 140);
 }
 
 NinjamPanel #soloButton,
 NinjamPanel #muteButton
 {
-    background-color: white;
+    background-color: rgb(140, 140, 140);
 }
 
 NinjamPanel QComboBox
@@ -128,13 +128,19 @@ NinjamPanel QComboBox
 
 
 
+
 NinjamTrackGroupView                        /* ninjam track group. If a ninjamer is using 2 channels they will appear grouped */
 {
-    border: 1px solid rgb(130, 130, 130);
+    border: 1px solid rgb(140, 140, 140);
 }
 
 
 IntervalProgressWindow                      /* The floating window showing the metronome/interval progress */
 {
-    background-color: rgb(220, 220, 220);
+    background-color: rgb(140, 140, 140);
+}
+
+#panelCombos QLabel             /* The labels in left side of comboboxes (bpi, bpm, accents and shape) */
+{
+    color: rgb(80, 80, 80);
 }
